<resources>
    <string name="app_name">一天</string>
    <string name="app_usage">app_usage</string>
    <string name="number_of_times">使用次数</string>
    <string name="tv_number_of_apps">使用个数</string>
    <string name="number_of_wake">解锁次数</string>
    <string name="counter">统计</string>
    <string name="share">分享</string>
    <string name="yitian">一天</string>
    <string name="app_manager">应用管理</string>
    <string name="setting">设置</string>
    <string name="splash_up">一天，世界</string>
    <string name="splash_down">如此美好</string>
    <string name="about_donw">记录点滴，如此美好</string>
    <string name="used_times">使用时间</string>
    <string name="used_time">使用次数</string>
    <string name="detail">明细</string>
    <string name="data_get">检查权限</string>
    <string name="data_get_desc">5.0以上要检查一下哦</string>
    <string name="back_data">备份数据</string>
    <string name="back_data_desc">备份应用数据</string>
    <string name="restore_data">恢复数据</string>
    <string name="restore_data_desc">恢复应用数据</string>
    <string name="version">新版本</string>
    <string name="version_desc">检测更新</string>
    <string name="about">关于</string>
    <string name="info">一天,世界</string>
    <string name="qq">qq交流群:462530984</string>
    <string name="goal">目标</string>
    <string name="trend">趋势</string>
    <string name="total_time">总时间</string>
    <string name="total_times">总次数</string>
    <string name="wake_time">解锁次数</string>
    <string name="count_day">统计天数</string>
    <string name="phone">手机</string>
    <string name="day">天</string>
    <string name="thosand">千</string>
    <string name="wan">万</string>
    <string name="millision">百万</string>
    <string name="yi">亿</string>
    <string name="qianwan">千万</string>
    <string name="seconds">秒</string>
    <string name="minute">分</string>
    <string name="hour">小时</string>
    <string name="hint_empty">还没用过这个应用哦</string>
    <string name="shouji">手机</string>
    <string name="sort_by_time">使用时间</string>
    <string name="sort_by_times">使用次数</string>
    <string name="app_name_with_introduce">一天</string>
    <string name="introduce">设计理念</string>
    <string name="design">手机，已经是生活不可或缺的一部分。「一天」只做一个单纯，简单的记录手机使用情况的软件,帮助你更好的使用手机。\n\n这么多应用，你选择了一天，这是我的幸运。如果你觉得一天是一个值得推荐的应用，你可以分享一天给好友，你的支持是我最大的动力和褒奖！</string>
    <string name="about_warming">关于提醒</string>
    <string name="wariming">一天并没有设置超时提醒，因为我觉得你已经有太多的提醒需要处理，一天只是单纯的记录手机使用情况，在你需要查看的时候，可以方便的查看。</string>
    <string name="about_design">关于设计</string>
    <string name="design_info">我不太会设计，所以一天的UI不是很精美，如果你对设计有独特的见解，愿意帮助我改进一天的设计，让一天更漂亮，请联系我，在此先替一天谢过！！！</string>
    <string name="about_me">关于我</string>
    <string name="buniaowanfeng">不鸟万峰  坐标：广州</string>
    <string name="bnwfdes">一个android菜鸟。我正在找工作，如果你有合适的职位，恰好觉得我也合适，我等你的消息哦!</string>
    <string name="share_desc">我正在用一天统计我的手机使用情况，快来看看你每天都用了什么软件吧，下载地址:</string>
    <string name="not_login">这里空空如也，\n下拉试试</string>
    <string name="login_hint">还没有登入哦，登入后可以将数据同步到云端哦</string>
    <string name="login">登入</string>
    <string name="username">用户名</string>
    <string name="useremail">邮箱</string>
    <string name="password">密码</string>
    <string name="create_counte">注册</string>
    <string name="have_count">已经有帐号，登入</string>
    <string name="create">没有帐号，注册一个</string>
    <string name="name_error">用户名最少要三位哦</string>
    <string name="email_error">邮箱格式错误</string>
    <string name="password_error">密码错误</string>
    <string name="password_format">密码长度要６大于６哦</string>
    <string name="name_empty">用户名为空</string>
    <string name="password_empty">密码为空</string>
    <string name="email_empty">邮箱为空</string>
    <string name="name_exists">用户名已经存在</string>
    <string name="email_exists">邮箱已经被注册</string>
    <string name="user_email_or_name">用户名或邮箱</string>
    <string name="sign_success">注册成功</string>
    <string name="logining">正在登入</string>
    <string name="name_or_email_wrong">用户名或邮箱错误</string>
    <string name="login_success">登入成功</string>
    <string name="not_save">还没有保存,确定要返回吗?</string>
    <string name="cancle">返回</string>
    <string name="not_singup">还没注册，确定要返回吗？</string>
    <string name="start_login">点此登入</string>
    <string name="sign_faild">登入失败</string>
    <string name="name_not_exists">用户名或邮箱不正确</string>
    <string name="not_login_back">还没有登入，确定要返回吗？</string>
    <string name="logout">退出当前帐号</string>
    <string name="logout_title">退出</string>
    <string name="lgout_detail">确定要退出当前帐号吗？</string>
    <string name="sure">确定</string>
    <string name="not_sure">取消</string>
    <string name="is_empty">这里空空如也，下拉试试．</string>
    <string name="head_format">%1$d日 %2$s</string>
    <string name="empty_format">%1$d:%2$d - %3$d:%4$d</string>
    <string name="time_format_two">%1$d:%2$d - %3$d:0%4$d</string>
    <string name="time_format_one">%1$d:0%2$d - %3$d:%4$d</string>
    <string name="time_format_both">%1$d:0%2$d - %3$d:0%4$d</string>
    <string name="sync_error">同步失败,请稍后再试</string>
    <string name="service_error">服务器暂时不可用,请稍后再试</string>
    <string name="sync_success">同步成功</string>
    <string name="edit">修改</string>

    <string name="add_tag">添加标签</string>
    <string name="add_desc">添加描述</string>
    <string name="add_location">添加地点</string>
    <string name="tv_permission">谁可以看</string>
    <string name="tv_permission_level">公开</string>
    <string name="list_empty_hint">没有用手机\n\n点这里可以修改哦</string>
    <string name="Tags">标签</string>
    <string name="desc">睡得还不错</string>
    <string name="location">地点</string>
    <string name="one">公开</string>
    <string name="zero">仅自己</string>
    <string name="date_format">%1$d月%2$d日</string>
    <string name="start_format">开始:\t%1$d:%2$d</string>
    <string name="start_format_one">开始:\t%1$d:0%2$d</string>
    <string name="end_format">结束:\t%1$d:%2$d</string>
    <string name="end_format_one">结束:\t%1$d:0%2$d</string>
    <string name="time_format">%1$d:%2$d</string>
    <string name="work">上班</string>
    <string name="sleep">睡觉</string>
    <string name="custom">自定义</string>
    <string name="custom_title">自定义标签</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="hide_item">隐藏</string>
    <string name="change_time">这是自动记录的时间，确定要修改吗？</string>
    <string name="edit_time">修改时间</string>
    <string name="edit_time_detail">这是自动记录的时间，确定要修改吗？</string>
    <string name="time_error">还没开始就结束了，你确定吗?</string>
    <string name="home">家里</string>
    <string name="idle_filter">手机空闲时间</string>
    <string name="set_idle_tile">手机空闲时间</string>
    <string name="no_todo">您用手机太频繁了,手机竟然没有空闲时间,要减少使用哦</string>
    <string name="net_error">网络错误,请稍后再试</string>
    <string name="no_data">暂时没有要同步的数据</string>
    <string name="no_more_data">oh,oh,没有数据了</string>
    <string name="selete_anohter">没有记录,换个条件试试</string>
    <string name="no_record">手机使用时间有点久哦!\n放下手机去休息下吧!</string>
    <string name="make_pic_error">生成分享失败,请稍后再试</string>
    <string name="make_pic">生成图片</string>
    <string name="edit_todo">编辑活动</string>
    <string name="my_activity">我的活动</string>
    <string name="from_yitian">来自一天的分享</string>
    <string name="save">保存</string>
    <string name="making_share">正在生成图片</string>
    <string name="empty_share">出问题了,过会再来吧</string>
    <string name="share_tag">%1$s  %2$s</string>
    <string name="share_detail">%1$s  %2$d月:%3$d日 %4$d:0%5$d </string>
    <string name="share_detail_one">%1$s   %2$d月%3$d日 %4$d:%5$d </string>
    <string name="get_data_error">获取数据失败,请稍后再试</string>
    <string name="new_version">发现新版本</string>
</resources>
