<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/count"
        android:icon="@drawable/ic_menu_trend"
        android:title="@string/counter"
        app:showAsAction="ifRoom"

        />
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/share"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/trend"
        android:icon="@drawable/ic_donut_large_black_36dp"
        android:title="@string/trend"
        app:showAsAction="ifRoom"

        />

    <item
        android:id="@+id/buniaowanfeng"
        android:icon="@drawable/ic_yitian"
        android:title="@string/yitian"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_menu_black_settings"
        android:title="@string/setting"
        app:showAsAction="ifRoom"
        />
</menu>