<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/check_permission"
        style="@style/SettingCardStyle"
        >
        <TextView
            android:text="@string/data_get"
            style="@style/SettingText"
            />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/check_version"
        style="@style/SettingCardStyle"
        >
        <TextView
            android:text="@string/version"
            style="@style/SettingText"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/about"
        style="@style/SettingCardStyle"
        >

        <TextView
            android:text="@string/about"
            style="@style/SettingText"/>
    </android.support.v7.widget.CardView>


</LinearLayout>