<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/edit_todo_toolbar"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_edit_todo"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:text="@string/edit_todo"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_done"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="36dp"
                android:text="@string/ok"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>


    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout style="@style/AddLinearLayout">
                <ImageView
                    style="@style/NormalImage"
                    android:src="@drawable/time"/>
                <TextView
                    android:id="@+id/tv_date"
                    android:layout_marginLeft="10dp"
                    style="@style/NormalText"
                    android:textSize="20sp"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_start_time"
                style="@style/NormalText"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:id="@+id/tv_end_time"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="55dp"
                style="@style/NormalText"
                android:layout_marginBottom="20dp"

                />
            <View style="@style/TodoLine"/>

            <LinearLayout style="@style/AddLinearLayout">
                <ImageView style="@style/NormalImage"
                           android:src="@drawable/tag"/>
                <TextView
                    android:id="@+id/tv_add_tag"
                    android:text="@string/add_tag"
                    style="@style/NormalText"
                    android:layout_width="match_parent"
                    />
            </LinearLayout>

            <View style="@style/TodoLine"/>

            <LinearLayout style="@style/AddLinearLayout"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/edit_desc"
                    android:hint="@string/add_desc"
                    style="@style/NormalEdit"
                    android:lines="4"
                    android:singleLine="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <View style="@style/TodoLine"/>

            <LinearLayout style="@style/AddLinearLayout">
                <ImageView style="@style/NormalImage"
                           android:src="@drawable/location"/>
                <TextView
                    android:id="@+id/add_location"
                    android:text="@string/add_location"
                    style="@style/NormalText"
                    android:layout_width="match_parent"
                    />
            </LinearLayout>
            <View style="@style/TodoLine"/>
            <LinearLayout style="@style/AddLinearLayout">
                <ImageView style="@style/NormalImage"
                           android:src="@drawable/permission"/>
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/tv_permission"
                    android:text="@string/tv_permission"
                    style="@style/NormalText"/>

                <TextView
                    android:id="@+id/tv_permission_level"
                    android:text="@string/one"
                    style="@style/NormalText"
                    android:gravity="right"
                    android:layout_marginRight="10dp"
                    />
            </LinearLayout>
            <View style="@style/TodoLine"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>