<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/about_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimaryDark"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarTitleStyle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/about_header_height"
               android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/ic_launcher"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/splash_up"
                    android:textColor="@color/md_white_1000"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/about_donw"
                    android:textColor="@color/md_white_1000"
                    android:textSize="18sp"/>

            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            >
                <TextView
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/introduce"
                    android:textColor="@color/md_grey_600"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:background="@drawable/bg_card_nopic"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:text="@string/design"
                        android:textColor="@color/md_grey_800"
                        android:textIsSelectable="true"
                        android:textSize="14sp"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/md_grey_500"/>

            <TextView
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/about_warming"
                android:textColor="@color/md_grey_600"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/bg_card_nopic"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="@string/wariming"
                    android:textColor="@color/md_grey_800"
                    android:textIsSelectable="true"
                    android:textSize="14sp"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/md_grey_500"/>

            <TextView
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/about_design"
                android:textColor="@color/md_grey_600"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/bg_card_nopic"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="@string/design_info"
                    android:textColor="@color/md_grey_800"
                    android:textIsSelectable="true"
                    android:textSize="14sp"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/md_grey_500"/>

            <TextView
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/about_me"
                android:textColor="@color/md_grey_600"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/bg_card_nopic"
                >

                <ImageView
                    android:id="@+id/ig_buniaowanfeng"
                    android:src="@mipmap/ic_launcher"
                    android:layout_width="56dp"
                    android:layout_height="56dp"/>

                <LinearLayout
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginTop="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="5dp"
                        android:id="@+id/tv_buniaowanfeng"
                        android:text="@string/buniaowanfeng"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/ig_buniaowanfeng"
                        android:layout_toRightOf="@id/ig_buniaowanfeng"
                        android:textColor="@color/md_grey_800"
                        />

                    <TextView
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_below="@id/tv_buniaowanfeng"
                        android:layout_toRightOf="@id/ig_buniaowanfeng"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bnwfdes"
                        android:textColor="@color/md_grey_600"
                        />
                </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:background="@drawable/bg_card_nopic"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_marginLeft="16dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginTop="5dp"
                        android:text="GitHub: "
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginTop="5dp"
                        android:text="https://github.com/buniaowanfeng"
                        android:autoLink="web"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginLeft="16dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginTop="5dp"
                        android:text="Blog: "
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginTop="5dp"
                        android:text="http://buniaowanfeng.github.io/"
                        android:autoLink="web"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginLeft="16dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginTop="5dp"
                        android:text="微博: "
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginTop="5dp"

                        android:text="不鸟万峰"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginLeft="16dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginTop="5dp"
                        android:text="Email: "
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textIsSelectable="true"
                        android:layout_marginTop="5dp"
                        android:text="buniaowanfeng@outlook.com"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginTop="5dp"
                        android:text="qq群:"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView

                        android:layout_marginTop="5dp"
                        android:text="462530984"
                        android:textIsSelectable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>